--- a/PortfolioWebsite.txt/assets/css/main.css
+++ b/PortfolioWebsite.txt/assets/css/main.css
@@ -1848,7 +1848,7 @@
 	}
 
 		a:hover {
-			color: #47D3E5;
+			color: darkred;
 		}
 
 	strong, b {
@@ -2012,8 +2012,8 @@
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			box-shadow: inset 0 0 0 1px #47D3E5;
-			color: #47D3E5 !important;
+			box-shadow: inset 0 0 0 1px darkred;
+			color: darkred !important;
 		}
 
 		input[type="submit"]:active,
@@ -2022,8 +2022,8 @@
 		button:active,
 		.button:active {
 			background-color: rgba(71, 211, 229, 0.2);
-			box-shadow: inset 0 0 0 1px #47D3E5;
-			color: #47D3E5 !important;
+			box-shadow: inset 0 0 0 1px darkred;
+			color: darkred !important;
 		}
 
 		input[type="submit"].special,
@@ -2041,7 +2041,7 @@
 			input[type="button"].special:hover,
 			button.special:hover,
 			.button.special:hover {
-				background-color: #47D3E5;
+				background-color: darkred;
 			}
 
 			input[type="submit"].special:active,
@@ -2334,8 +2334,8 @@
 		input[type="url"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #47D3E5;
-			box-shadow: 0 0 0 1px #47D3E5;
+			border-color: darkred;
+			box-shadow: 0 0 0 1px darkred;
 		}
 
 	.select-wrapper:before {
@@ -2361,8 +2361,8 @@
 
 	input[type="checkbox"]:focus + label:before,
 	input[type="radio"]:focus + label:before {
-		border-color: #47D3E5;
-		box-shadow: 0 0 0 1px #47D3E5;
+		border-color: darkred;
+		box-shadow: 0 0 0 1px darkred;
 	}
 
 	::-webkit-input-placeholder {
@@ -2436,14 +2436,14 @@
 	}
 
 	a.icon.style2:hover:before {
-		box-shadow: inset 0 0 0 1px #47D3E5;
-		color: #47D3E5;
+		box-shadow: inset 0 0 0 1px darkred;
+		color: darkred;
 	}
 
 	a.icon.style2:active:before {
 		background-color: rgba(71, 211, 229, 0.1);
-		box-shadow: inset 0 0 0 1px #47D3E5;
-		color: #47D3E5;
+		box-shadow: inset 0 0 0 1px darkred;
+		color: darkred;
 	}
 
 /* Image */
@@ -6182,7 +6182,7 @@
 		}
 
 			.gallery.style1 a:hover {
-				color: #47D3E5;
+				color: darkred;
 			}
 
 		.gallery.style1 strong, .gallery.style1 b {
@@ -6221,8 +6221,8 @@
 			.gallery.style1 input[type="button"]:hover,
 			.gallery.style1 button:hover,
 			.gallery.style1 .button:hover {
-				box-shadow: inset 0 0 0 1px #47D3E5;
-				color: #47D3E5 !important;
+				box-shadow: inset 0 0 0 1px darkred;
+				color: darkred !important;
 			}
 
 			.gallery.style1 input[type="submit"]:active,
@@ -6231,8 +6231,8 @@
 			.gallery.style1 button:active,
 			.gallery.style1 .button:active {
 				background-color: rgba(71, 211, 229, 0.2);
-				box-shadow: inset 0 0 0 1px #47D3E5;
-				color: #47D3E5 !important;
+				box-shadow: inset 0 0 0 1px darkred;
+				color: darkred !important;
 			}
 
 			.gallery.style1 input[type="submit"].special,
@@ -6250,7 +6250,7 @@
 				.gallery.style1 input[type="button"].special:hover,
 				.gallery.style1 button.special:hover,
 				.gallery.style1 .button.special:hover {
-					background-color: #47D3E5;
+					background-color: darkred;
 				}
 
 				.gallery.style1 input[type="submit"].special:active,
@@ -6258,7 +6258,7 @@
 				.gallery.style1 input[type="button"].special:active,
 				.gallery.style1 button.special:active,
 				.gallery.style1 .button.special:active {
-					background-color: #1ebdd1;
+					background-color: darkred;
 				}
 
 		.gallery.style1 > .forward, .gallery.style1 > .backward {
@@ -6512,7 +6512,7 @@
 		}
 
 			.gallery.style2 a:hover {
-				color: #47D3E5;
+				color: darkred;
 			}
 
 		.gallery.style2 strong, .gallery.style2 b {
@@ -6551,8 +6551,8 @@
 			.gallery.style2 input[type="button"]:hover,
 			.gallery.style2 button:hover,
 			.gallery.style2 .button:hover {
-				box-shadow: inset 0 0 0 1px #47D3E5;
-				color: #47D3E5 !important;
+				box-shadow: inset 0 0 0 1px darkred;
+				color: darkred !important;
 			}
 
 			.gallery.style2 input[type="submit"]:active,
@@ -6561,8 +6561,8 @@
 			.gallery.style2 button:active,
 			.gallery.style2 .button:active {
 				background-color: rgba(71, 211, 229, 0.2);
-				box-shadow: inset 0 0 0 1px #47D3E5;
-				color: #47D3E5 !important;
+				box-shadow: inset 0 0 0 1px darkred;
+				color: darkred !important;
 			}
 
 			.gallery.style2 input[type="submit"].special,
@@ -6580,7 +6580,7 @@
 				.gallery.style2 input[type="button"].special:hover,
 				.gallery.style2 button.special:hover,
 				.gallery.style2 .button.special:hover {
-					background-color: #47D3E5;
+					background-color: darkred;
 				}
 
 				.gallery.style2 input[type="submit"].special:active,
@@ -8083,7 +8083,7 @@
 			}
 
 				#wrapper > .invert a:hover {
-					color: #47D3E5;
+					color: darkred;
 				}
 
 			#wrapper > .invert strong, #wrapper > .invert b {
@@ -8126,8 +8126,8 @@
 				#wrapper > .invert input[type="button"]:hover,
 				#wrapper > .invert button:hover,
 				#wrapper > .invert .button:hover {
-					box-shadow: inset 0 0 0 1px #47D3E5;
-					color: #47D3E5 !important;
+					box-shadow: inset 0 0 0 1px darkred;
+					color: darkred !important;
 				}
 
 				#wrapper > .invert input[type="submit"]:active,
@@ -8136,8 +8136,8 @@
 				#wrapper > .invert button:active,
 				#wrapper > .invert .button:active {
 					background-color: rgba(71, 211, 229, 0.2);
-					box-shadow: inset 0 0 0 1px #47D3E5;
-					color: #47D3E5 !important;
+					box-shadow: inset 0 0 0 1px darkred;
+					color: darkred !important;
 				}
 
 				#wrapper > .invert input[type="submit"].special,
@@ -8155,7 +8155,7 @@
 					#wrapper > .invert input[type="button"].special:hover,
 					#wrapper > .invert button.special:hover,
 					#wrapper > .invert .button.special:hover {
-						background-color: #47D3E5;
+						background-color: darkred;
 					}
 
 					#wrapper > .invert input[type="submit"].special:active,
@@ -8189,8 +8189,8 @@
 				#wrapper > .invert input[type="url"]:focus,
 				#wrapper > .invert select:focus,
 				#wrapper > .invert textarea:focus {
-					border-color: #47D3E5;
-					box-shadow: 0 0 0 1px #47D3E5;
+					border-color: darkred;
+					box-shadow: 0 0 0 1px darkred;
 				}
 
 			#wrapper > .invert .select-wrapper:before {
@@ -8216,8 +8216,8 @@
 
 			#wrapper > .invert input[type="checkbox"]:focus + label:before,
 			#wrapper > .invert input[type="radio"]:focus + label:before {
-				border-color: #47D3E5;
-				box-shadow: 0 0 0 1px #47D3E5;
+				border-color: darkred;
+				box-shadow: 0 0 0 1px darkred;
 			}
 
 			#wrapper > .invert ::-webkit-input-placeholder {
@@ -8245,14 +8245,14 @@
 			}
 
 			#wrapper > .invert a.icon.style2:hover:before {
-				box-shadow: inset 0 0 0 1px #47D3E5;
-				color: #47D3E5;
+				box-shadow: inset 0 0 0 1px darkred;
+				color: darkred;
 			}
 
 			#wrapper > .invert a.icon.style2:active:before {
 				background-color: rgba(71, 211, 229, 0.1);
-				box-shadow: inset 0 0 0 1px #47D3E5;
-				color: #47D3E5;
+				box-shadow: inset 0 0 0 1px darkred;
+				color: darkred;
 			}
 
 			#wrapper > .invert ul.alt li {
